feat: email confirmation

--- a/Tickette.API/Emails/Templates/confirm_email.html
+++ b/Tickette.API/Emails/Templates/confirm_email.html
@@ -23,7 +23,7 @@
         
         <div class="content">
             <h2>Verify Your Email Address</h2>
-            <p>Thank you for signing up, <strong>{{UserName}}</strong>!</p>
+            <p>Thank you for signing up</p>
             <p>Please confirm your email address to activate your account.</p>
             <a href="{{VerificationLink}}" class="button">Verify Email</a>
             <p class="fallback-link">
